--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,6 +1,6 @@
 .element__image {
     width: 100%;
-    position: absolute;
-    object-fit: contain;
+    /*position: absolute;*/
+    /*object-fit: contain;*/
     
 }
