--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -5,8 +5,8 @@
 @import url(../element/__title/element__title.css);
 
 .element {
-    width: 100%;
-    background-color: white;
+    background-image: url(../../../images/card-white-rectangle.png);
+    width: 100%;  
     display: flex;
     flex-direction: column;
 
