--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,4 +3,9 @@
     background-color: black;
     font-family: 'Inter', sans-serif;
     margin: auto;
+   
   }
+
+* {
+  box-sizing: border-box;
+}
