--- a/blocks/element/__image-container/element__image-container.css
+++ b/blocks/element/__image-container/element__image-container.css
@@ -1,5 +1,6 @@
 .element__image-container {
     width: 100%;
+    padding: 0;
     /*padding-top: 56.25%;*/
     /*overflow: hidden;*/
     /*position: relative;*/
