--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -5,10 +5,11 @@
 @import url(../element/__title/element__title.css);
 
 .element {
-    background-image: url(../../../images/card-white-rectangle.png);
-    width: 100%;  
+    
+    /*width: 100%;  */
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 
 }
 
