--- a/blocks/element/__content/element__content.css
+++ b/blocks/element/__content/element__content.css
@@ -1,9 +1,10 @@
 .element__content {
     width: calc(100% - 36px);
     background-color: white;
-    /*padding: 2px 16px;*/
+    padding: 25px 21px 31px 15px;
     display: flex;
     /*margin: 25px, 21px, 31px, 15px;*/
     justify-content: space-between;
     padding: 0;
+    border-radius: 0 0 5px 5px;
 }
