--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -6,7 +6,7 @@
 
 .element {
     
-    /*width: 100%;  */
+    width: 100%; 
     display: flex;
     flex-direction: column;
     overflow: hidden;
