--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -15,3 +15,10 @@
     grid-gap: 16px;
     margin: 0 48px 92px;
   }*/
+
+@media screen and (max-width: 450px) {
+    .elements {
+      grid-template-columns: repeat(1, 1fr);
+      margin: 0 19px 50px;
+    }
+}
