--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -3,4 +3,6 @@
     background-repeat: no-repeat;
     background-position: center;
     object-fit: contain;
+    width: 150px;
+    height: 50px;
 }
