--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,6 +5,7 @@
     grid-column-gap: 17px;
     grid-row-gap: 20px;
     margin: 0 200px 68px;
+    border: solid 1px purple;
 }
 
 
@@ -16,9 +17,32 @@
     margin: 0 48px 92px;
   }*/
 
+  @media screen and (max-width: 768px) {
+    .elements {
+      grid-template-columns: repeat(2, 1fr);
+      margin: 0 120px 50px;
+    }
+}
+
+
 @media screen and (max-width: 450px) {
     .elements {
       grid-template-columns: repeat(1, 1fr);
       margin: 0 19px 50px;
     }
 }
+
+/*@media screen and (max-width: 768px) {
+    .photo-grid {
+      grid-template-columns: repeat(2, 1fr);
+      margin: 0 24px 88px;
+    }
+  }
+  
+  @media screen and (max-width: 450px) {
+    .photo-grid {
+      grid-template-columns: repeat(1, 1fr);
+      margin: 0 16px 64px;
+    }
+  }
+  
