--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,5 +7,21 @@
     flex-direction: column;
     margin: 45px auto 0;
     align-content: flex-start;
+    border: solid 1px pink;
     
+}
+
+
+@media screen and (max-width: 768px) {
+    .header {
+      width: calc(100% - 240px);
+    }
+}
+
+
+@media screen and (max-width: 450px) {
+    .header {
+      width: 100%;
+      
+    }
 }
