--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,6 +3,9 @@
     background-color: black;
     font-family: 'Inter', sans-serif;
     margin: auto;   
+    padding: 0;
+    margin: 0;
+    border: solid 1px yellow;
   }
 
 * {
