--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,6 +1,6 @@
 .profile__title {
-    /*width: 100%;
-    height: auto;*/
+    width: 100%;
+    /*height: auto;*/
     /*object-fit: contain;*/
     align-self: flex-end;
     
