--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,14 +5,14 @@
     grid-template-rows: 1fr 28%;
     grid-column-gap: 18px;
     grid-row-gap: 16px;
-    margin-right: 165px;
+    /*margin-right: 165px;*/
     margin-left: 30px;
 }
 
 
 @media screen and (max-width: 768px) {
     .profile__info {
-        margin-right: 30px;
+        /*margin-right: 30px;*/
         /*width: calc(100% - )*/
     }
 }
