--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,6 +1,27 @@
 .footer__copyright {
-    width: 100%;
-    object-fit: contain;
-    object-position: left;
+   
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 22px;
     
+}
+
+@media screen and (max-width: 930px) {
+    .footer__copyright {
+        font-size: 14px;
+        line-height: 17px;
+    }
+}
+
+
+
+
+
+@media screen and (max-width: 550px) {
+    .footer__copyright {
+        font-size: 14px;
+        line-height: 17px;
+    }
 }
