--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,4 +1,9 @@
 .element__title {
-  width: 100;
-  object-fit: contain;  
+  font-family: 'Inter', sans-serif;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 900;
+  font-style: normal;
+  margin-top: 0;
+  margin-bottom: 0;
 }
