--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,48 +1,31 @@
 .elements {
-    max-width: 1280px;
+    /*max-width: 1280px;*/
+    width: 880px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 17px;
     grid-row-gap: 20px;
-    margin: 0 200px 68px;
-    border: solid 1px purple;
+    margin: 0 auto 68px;
+ 
 }
+ /*in proj 3, I used explicit margin value for R and L, not auto*/
 
-
-/*.photo-grid {
-    display: grid;
-    max-width: 1280px;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 16px;
-    margin: 0 48px 92px;
-  }*/
-
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 930px) {
     .elements {
+      width: 581px;
       grid-template-columns: repeat(2, 1fr);
-      margin: 0 120px 50px;
+      margin: 0 auto 50px;
     }
 }
 
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 610px) {
     .elements {
+      width: 282px;
       grid-template-columns: repeat(1, 1fr);
-      margin: 0 19px 50px;
+      grid-column-gap: 0;
+      margin: 0 auto 50px;
     }
 }
 
-/*@media screen and (max-width: 768px) {
-    .photo-grid {
-      grid-template-columns: repeat(2, 1fr);
-      margin: 0 24px 88px;
-    }
-  }
-  
-  @media screen and (max-width: 450px) {
-    .photo-grid {
-      grid-template-columns: repeat(1, 1fr);
-      margin: 0 16px 64px;
-    }
-  }
   
