--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     margin: 45px auto 0;
     align-content: flex-start;
-    border: solid 1px pink;
+    
     
 }
 
@@ -22,6 +22,7 @@
 @media screen and (max-width: 450px) {
     .header {
       width: 100%;
+      margin-top: 28px;
       
     }
 }
