--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,8 +1,25 @@
 .profile__add-button {
-    background-image: url(../../../images/profile-plus.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    object-fit: contain;
+    margin-left: auto;
     width: 150px;
     height: 50px;
 }
+
+
+
+
+
+@media screen and (max-width: 1130px) {
+    .profile__add-button {      
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .profile__add-button {
+        width: 282px;
+        height: 50px;
+        margin: auto; 
+    }
+}
+
