--- a/blocks/profile/__explorer/profile__explorer.css
+++ b/blocks/profile/__explorer/profile__explorer.css
@@ -1,6 +1,14 @@
 .profile__explorer {
-    /*height: auto;
-    width: 100%;   */
-    justify-content: left;
-    /*align-self: flex-start;*/
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: normal;
+    font-style: normal;
+    margin-top: 16px;
+}
+
+@media screen and (max-width: 450px) {
+    .profile__explorer {
+        font-size: 14px;
+        line-height: 16.94px;
+    }
 }
