--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,41 +1,23 @@
 .profile__info {
-  
-    display: grid;
-    grid-template-columns: 90% 1fr;
-    grid-template-rows: 1fr 28%;
-    grid-column-gap: 18px;
-    grid-row-gap: 16px;
-    /*margin-right: 165px;*/
+    display: flex;
+    flex-direction: column;
     margin-left: 30px;
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1130px) {
     .profile__info {
-        /*margin-right: 30px;*/
-        /*width: calc(100% - )*/
+        margin-right: auto;
+        margin-left: auto;
+        align-items: center;
     }
 }
 
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 550px) {
     .profile__info {
-      width: calc(100% - 38px);  
-      display: flex;
-      flex-wrap: wrap;
-      
-      margin: 0 auto;
+        margin: 0 auto;
       
     }
 }
 
-/*.place {
-    display: grid;
-    grid-template-columns: 47% 1fr;
-    grid-column-gap: 40px;
-    grid-row-gap: 48px;
-    color: white;
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    margin-bottom: 81px;
-  }*/
