--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,7 +1,32 @@
 .profile__title {
-    width: 100%;
-    /*height: auto;*/
-    /*object-fit: contain;*/
-    align-self: flex-end;
+    font-size: 42px;
+    line-height: 48px;
+    font-weight: 500;
+    font-style: normal;
+  
+    margin-bottom: 0;
+
     
 }
+
+/*@media screen and (max-width: 1135px) {
+    .profile__title {
+        font-size: 30px;
+        line-height: 35px;
+    }
+}*/
+
+@media screen and (max-width: 675px) {
+    .profile__title {
+        font-size: 30px;
+        line-height: 35px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .profile__title {
+        font-size: 22px;
+        line-height: 26.63px;
+    }
+}
+
