--- a/blocks/element/__content/element__content.css
+++ b/blocks/element/__content/element__content.css
@@ -1,4 +1,5 @@
 .element__content {
+   max-width: 282px;
    display: flex;
    justify-content: space-between;
    margin: 25px 21px 31px 15px;
@@ -8,3 +9,4 @@
    overflow: hidden;
 
 }
+
