--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,9 +1,13 @@
 .element__title {
-  font-family: 'Inter', sans-serif;
-  font-size: 24px;
-  line-height: 29px;
-  font-weight: 900;
-  font-style: normal;
-  margin-top: 0;
-  margin-bottom: 0;
+    font-family: 'Inter', sans-serif;
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 900;
+    font-style: normal;
+    margin-top: 0;
+    margin-bottom: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  
 }
