--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,7 +1,10 @@
 .profile__add-button {
+    background-color: black;
     margin-left: auto;
     width: 150px;
     height: 50px;
+    border: 2px solid white;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 1130px) {
@@ -15,7 +18,7 @@
     .profile__add-button {
         width: 282px;
         height: 50px;
-        margin: auto; 
+        margin: auto;
     }
 }
 
