--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,6 +6,8 @@
 @import url(../profile/__add-button/profile__add-button.css);
 @import url(../profile/__edit-button/profile__edit-button.css);
 @import url(../profile/__info-top/profile__info-top.css);
+@import url(../profile/__add-button-plus/profile__add-button-plus.css);
+@import url(../profile/__edit-button-vector/profile__edit-button-vector.css);
 
 
 
