--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -2,22 +2,32 @@
 @import url(../modal/__form-submit/modal__form-submit.css);
 @import url(../modal/__title/modal__title.css);
 @import url(../modal/__form/modal__form.css);
+@import url(../modal/__close-icon/modal__close-icon.css);
 
 
 .modal {
     height: 330px;
     width: 430px;
     border-radius: 10px;
-    /*display: none;*/  
+    display: none;
     background-color: white;
     border: none;
     margin: 10px auto;
-    /*position: absolute;*/
+    position: absolute;
+    top: 195px;
+    left: 34%;
+    right: 34%;
+    margin: 0;
+    z-index: 1;
+    
 }
 
 @media screen and (max-width: 550px) {
     .modal {
         width: 282px;
         height: 322px;
+        top: 123px;
+        left: 5%;
+        right: 5%;
     }
 }
