--- a/blocks/overlay/overlay.css
+++ b/blocks/overlay/overlay.css
@@ -1,6 +1,8 @@
 .overlay {
     position: absolute;
     display: none;
+    width: 100%;
+    height: 100%;
     top: 0;
     bottom: 0;
     right: 0;
@@ -9,3 +11,4 @@
     opacity: 0.5;
 
 }
+
