--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,6 +5,7 @@
     height: 50px;
     border: 2px solid white;
     box-sizing: border-box;
+    padding: 0;
 }
 
 @media screen and (max-width: 1130px) {
