--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -9,15 +9,19 @@
     height: 330px;
     width: 430px;
     border-radius: 10px;
-    display: none;
+    display: block;
     background-color: white;
     border: none;
-    margin: 10px auto;
-    position: absolute;
-    top: 195px;
-    left: 34%;
-    right: 34%;
+    /*margin: auto;*/
     margin: 0;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /*margin-top: -165px;
+    margin-left: -215px;
+    /*right: 34%;*/
+    
     z-index: 1;
     
 }
@@ -26,8 +30,6 @@
     .modal {
         width: 282px;
         height: 322px;
-        top: 123px;
-        left: 5%;
-        right: 5%;
+      
     }
 }
