code modal block

--- a/blocks/element/__bottom/element__bottom.css
+++ b/blocks/element/__bottom/element__bottom.css
@@ -4,5 +4,8 @@
     padding: 0 0;
     border-radius: 0 0 5% 5%;
     height: 79px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   
 }
