--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -3,6 +3,8 @@
 @import url(../modal/__title/modal__title.css);
 @import url(../modal/__form/modal__form.css);
 @import url(../modal/__close-icon/modal__close-icon.css);
+@import url(../modal/__container/modal__container.css);
+@import url(../modal/__close-button/modal__close-button.css);
 
 
 .modal {
@@ -12,24 +14,17 @@
     display: block;
     background-color: white;
     border: none;
-    /*margin: auto;*/
     margin: 0;
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    /*margin-top: -165px;
-    margin-left: -215px;
-    /*right: 34%;*/
-    
-    z-index: 1;
-    
+    transform: translate(-50%, -50%);   
+    z-index: 1;    
 }
 
 @media screen and (max-width: 550px) {
     .modal {
         width: 282px;
-        height: 322px;
-      
+        height: 322px;      
     }
 }
