--- a/blocks/overlay/overlay.css
+++ b/blocks/overlay/overlay.css
@@ -1,8 +1,8 @@
 .overlay {
     position: absolute;
-    display: none;
+    display: block;
     width: 100%;
-    height: 100%;
+    height: auto;
     top: 0;
     bottom: 0;
     right: 0;
