--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -11,7 +11,7 @@
     height: 330px;
     width: 430px;
     border-radius: 10px;
-    display: block;
+    display: none;
     background-color: white;
     border: none;
     margin: 0;
