--- a/blocks/overlay/overlay.css
+++ b/blocks/overlay/overlay.css
@@ -1,6 +1,6 @@
 .overlay {
-    position: absolute;
-    display: block;
+    position: fixed;
+    display: none;
     width: 100%;
     height: auto;
     top: 0;
