--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -9,7 +9,7 @@
     .profile__info {
         margin-right: auto;
         margin-left: auto;
-        align-items: center;
+        /*align-items: center;*/
     }
 }
 
