--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -5,6 +5,8 @@
 @import url(../modal/__close-icon/modal__close-icon.css);
 @import url(../modal/__container/modal__container.css);
 @import url(../modal/__close-button/modal__close-button.css);
+@import url(../modal/__form-name/modal__form-name.css);
+@import url(../modal/__form-occupation/modal__form-occupation.css);
 
 
 .modal {
