--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,11 +5,11 @@
     margin-bottom: 41px;
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
     .header__logo {
       margin-left: 
     }
-}
+}*/
 
 
 @media screen and (max-width: 450px) {
