--- a/blocks/modal/__close-button/modal__close-button.css
+++ b/blocks/modal/__close-button/modal__close-button.css
@@ -3,7 +3,7 @@
     height: 40px;
     width: 40px;
     padding: 0;
-    box-sizing: content-box;
+    /*box-sizing: content-box;*/
     /*position: fixed;
     top: 50%;
     left: 50%;
