--- a/blocks/modal/__close-button/modal__close-button.css
+++ b/blocks/modal/__close-button/modal__close-button.css
@@ -3,11 +3,10 @@
     height: 40px;
     width: 40px;
     padding: 0;
-    /*box-sizing: content-box;*/
-    /*position: fixed;
-    top: 50%;
+    position: fixed;
+    /*top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);  */   
+    transform: translate(-50%, -50%);*/ 
     margin-top: -40px;
     margin-left: 430px;
     display: block;
