--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -6,6 +6,8 @@
     border: 2px solid white;
     box-sizing: border-box;
     padding: 0;
+    cursor: pointer;
+   
 }
 
 @media screen and (max-width: 1130px) {
