--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,19 +1,22 @@
 .profile__edit-button {
     background-color: black;
+    /*background-image: url(../../../images/edit-button.png);*/
     height: 24px;
     width: 24px;
     margin-left: 18px;
-    border: 1px solid white;
-    box-sizing: border-box;
-    align-content: center;
+    padding: 0;
     margin-top: 45px;
+    border: none;  
+    cursor: pointer;
+}
+
+
  
     
-}
 
 @media screen and (max-width: 675px) {
     .profile__edit-button {
-        margin-top: 32px;       
+        margin-top: 31px;       
     }
 }
 
