--- a/pages/index.css
+++ b/pages/index.css
@@ -8,4 +8,5 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/modal/modal.css);
 @import url(../blocks/overlay/overlay.css);
+@import url(../blocks/button/button.css);
 
