--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -10,7 +10,23 @@
 
 
 .modal {
-    font-family: 'Inter', sans-serif;
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: auto;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    opacity: 0.5;
+
+}
+
+
+
+
+    /*font-family: 'Inter', sans-serif;
     height: 330px;
     width: 430px;
     border-radius: 10px;
@@ -23,7 +39,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;    
-}
+}*/
 
 @media screen and (max-width: 550px) {
     .modal {
