--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -18,8 +18,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    background-color: rgb(0,0,0);
-    opacity: 0.5;
+    background-color: rgb(0,0,0, 0.5);
 
 }
 
