--- a/blocks/modal/__form/modal__form.css
+++ b/blocks/modal/__form/modal__form.css
@@ -2,19 +2,22 @@
     height: 330px;
     width: 430px; 
     border-radius: 10px;
-    margin: auto;
+    /*margin: auto;*/
+    /*left: calc(50% - 215px);
+    top: calc(50% - 165px);*/
     display: flex;
     align-items: center;
     flex-direction: column;
     background-color: white;
     border: none;
-    z-index: 4;
-  
+    z-index: 4; 
 }
 
 @media screen and (max-width: 550px) {
     .modal__form {
         width: 282px;
         height: 322px;
+        left: calc(50% - 141px);
+        top: calc(50% - 161px);
     }
 }
