--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -12,14 +12,15 @@
 .modal {
     position: fixed;
     display: none;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(0,0,0, 0.5);
     width: 100%;
     height: auto;
     top: 0;
     bottom: 0;
     right: 0;
     left: 0;
-    background-color: rgb(0,0,0, 0.5);
-
 }
 
 
@@ -42,7 +43,7 @@
 
 @media screen and (max-width: 550px) {
     .modal {
-        width: 282px;
-        height: 322px;      
+        width: 100%;
+        height: auto;      
     }
 }
