--- a/blocks/modal/__close-button/modal__close-button.css
+++ b/blocks/modal/__close-button/modal__close-button.css
@@ -4,9 +4,10 @@
     width: 40px;
     padding: 0;
     position: absolute;
-    top: 240px;
+    top: -40px;
+    right: -40px;
     /*right: 335px;*/
-    margin-left: calc(50% - 215px);
+    /*margin-left: calc(50% - 215px);*/
     z-index: 100;
     border: none;
     cursor: pointer;
@@ -18,7 +19,7 @@
         width: 26px;
         height: 26px;
         right: 0;
-        top: -30px;
+        top: -26px;
      
     }
 }
