--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -8,21 +8,12 @@
     justify-content: center;
     vertical-align: middle;
     height: 100vh;
+}   
 
 
-    /*height: 330px;
-    width: 430px;
-    left: calc(50% - 105px);
+  
+    /*left: calc(50% - 105px);
     top: */
-
-
-    /*added from the .modal*/
-    /*height: 330px;
-    width: 430px;
-    border-radius: 10px;*/
-    /*display: none;*/
-    /*background-color: white;
-    border: none;*/
     /*margin: 0;*/
     /*position: fixed;
     top: 50%;
@@ -30,4 +21,3 @@
     transform: translate(-50%, -50%);*/
 
   
-}
