--- a/blocks/modal/__form/modal__form.css
+++ b/blocks/modal/__form/modal__form.css
@@ -5,6 +5,7 @@
     /*margin: auto;*/
     /*left: calc(50% - 215px);
     top: calc(50% - 165px);*/
+    position: relative;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -17,7 +18,6 @@
     .modal__form {
         width: 282px;
         height: 322px;
-        left: calc(50% - 141px);
-        top: calc(50% - 161px);
+       
     }
 }
