--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,7 @@
     max-width: 1280px;
     background-color: black;
     font-family: 'Inter', sans-serif;
-    margin: auto;
+    margin: 0;
     padding: 0;
     
   }
