--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,14 +1,13 @@
-@import url(../profile/__avatar/profile__avatar.css);
-@import url(../profile/__info/profile__info.css);
-@import url(../profile/__picture/profile__picture.css);
-@import url(../profile/__title/profile__title.css);
-@import url(../profile/__occupation/profile__occupation.css);
-@import url(../profile/__add-button/profile__add-button.css);
-@import url(../profile/__edit-button/profile__edit-button.css);
-@import url(../profile/__info-top/profile__info-top.css);
-@import url(../profile/__add-button-plus/profile__add-button-plus.css);
-@import url(../profile/__edit-button-image/profile__edit-button-image.css);
-
+@import url(./__avatar/profile__avatar.css);
+@import url(./__info/profile__info.css);
+@import url(./__picture/profile__picture.css);
+@import url(./__title/profile__title.css);
+@import url(./__occupation/profile__occupation.css);
+@import url(./__add-button/profile__add-button.css);
+@import url(./__edit-button/profile__edit-button.css);
+@import url(./__info-top/profile__info-top.css);
+@import url(./__add-button-plus/profile__add-button-plus.css);
+@import url(./__edit-button-image/profile__edit-button-image.css);
 
 .profile {
     width: calc(100% - 400px);
@@ -29,16 +28,13 @@
       flex-direction: column;
       margin-left: auto;
       margin-right: auto;
-      align-items: center;
       text-align: center;
     }
 }
 
-
 @media screen and (max-width: 550px) {
     .profile {
-      margin: 70.25px auto 36px;
-      /*align-content: center;*/
+      margin: 38.25px auto 36px;
       width: calc(100% - 38px);
       
     }
