--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,4 @@
-@import url(../header/__logo/header__logo.css);
-@import url(../header/__line/header.line.css);
+@import url(./__logo/header__logo.css);
 
 .header {
     width: calc(100% - 400px);
@@ -7,8 +6,6 @@
     flex-direction: column;
     margin: 45px auto 0;
     align-content: flex-start;
-    
-    
 }
 
 
@@ -23,6 +20,5 @@
     .header {
       width: 100%;
       margin-top: 28px;
-      
     }
 }
