--- a/blocks/modal/__form-control/modal__form-control.css
+++ b/blocks/modal/__form-control/modal__form-control.css
@@ -9,9 +9,10 @@
     text-align: left;
     margin: 0 36px 30px;
     border: none;
-    border-bottom: 1px solid black;
-    border-color: black, 0.2;
+    border-bottom: 1px solid;
+    border-color: rgba(0, 0, 0, 0.2);
     outline: none;     
+    padding-bottom: 13.26px;
 }
 
 .modal__form-control:last-child {
@@ -23,5 +24,6 @@
     .modal__form-control {
         width: 238px;
         margin: 0 22px 30px;
+        padding-bottom: 13px;
     }
 }
