--- a/blocks/modal/__form-submit/modal__form-submit.css
+++ b/blocks/modal/__form-submit/modal__form-submit.css
@@ -6,18 +6,21 @@
     font-size: 18px;
     font-weight: normal;
     font-style: normal;
-    margin: 0 36px 36.5px;
+    margin: 18px 36px 36.5px;
     line-height: 21.78px;
     width: 358px;
     height: 50.15px;
     border: 0;
     border-radius: 2px;
+    padding: 0;
     
 }
 
 @media screen and (max-width: 550px) {
     .modal__form-submit {
         width: 238px;
-        margin: 0 22px 25px;
+        margin: 15px 22px 25px;
+        font-size: 14px;
+        line-height: 16.94px;
     }
 }
