--- a/blocks/modal/__title/modal__title.css
+++ b/blocks/modal/__title/modal__title.css
@@ -12,5 +12,7 @@
     .modal__title {
         width: 238px;
         margin: 25px 22px 75px;
+        font-size: 18px;
+        line-height: 21.78px;
     }
 }
