--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,14 @@
-@import url(../styles/normalize.css);
 @import url(../vendor/fonts/fonts.css);
+@import url(../vendor/normalize.css);
+@import url(../blocks/modal/modal.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/element/element.css);
-@import url(../blocks/modal/modal.css);
 @import url(../blocks/button/button.css);
+@import url(../scripts/index.js);
+
+
 
