--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,7 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/button/button.css);
 @import url(../scripts/index.js);
+@import url(../blocks/modal/_open/modal_open.css);
 
 
 
