debug modal and code javascript

--- a/blocks/modal/__form-control/modal__form-control.css
+++ b/blocks/modal/__form-control/modal__form-control.css
@@ -1,6 +1,6 @@
 .modal__form-control {
     width: 358px;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', Arial, sans-serif;'Inter', Arial, sans-serif;'Inter', sans-serif;
     font-size: 14px;
     font-weight: normal;
     font-style: normal;
