--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -2,5 +2,5 @@
     max-width: 1280px;
     padding: 0;
     margin: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
 }
