--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,6 +1,6 @@
 .element__title {
     max-width: 225px;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     font-size: 24px;
     line-height: 29px;
     font-weight: 900;
