--- a/blocks/modal/__title/modal__title.css
+++ b/blocks/modal/__title/modal__title.css
@@ -1,5 +1,5 @@
 .modal__title {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     font-size: 24px;
     font-weight: 900;
     line-height: 29.05px;
