debug modal and code javascript

--- a/blocks/modal/__form-submit/modal__form-submit.css
+++ b/blocks/modal/__form-submit/modal__form-submit.css
@@ -2,7 +2,7 @@
     background-color: black;
     color: white;
     cursor: pointer;
-    font-family: 'Inter', Arial, sans-serif;'Inter', Arial, sans-serif;'Inter', sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     font-size: 18px;
     font-weight: normal;
     font-style: normal;
