--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,6 +6,8 @@
     flex-direction: column;
     margin: 45px auto 0;
     align-content: flex-start;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+   
 }
 
 
