--- a/blocks/modal/__form/__form_control/modal__form_control.css
+++ b/blocks/modal/__form/__form_control/modal__form_control.css
@@ -1,4 +1,4 @@
-.modal__form-control {
+.modal__form_control {
     width: 358px;
     font-family: 'Inter', Arial, sans-serif;
     font-size: 14px;
@@ -7,23 +7,18 @@
     line-height: 16.94px;
     box-sizing: border-box;
     text-align: left;
-    margin: 0 36px 30px;
+    margin: 29px 36px 0;
     border: none;
-    border-bottom: 1px solid;
-    border-color: rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     outline: none;
-    padding-bottom: 13.26px;
+    padding: 0 0 12px 0;
 }
 
-.modal__form-control:last-child {
-    margin-top: 30px;
-    margin-bottom: 48px;
-}
 
 @media screen and (max-width: 550px) {
-    .modal__form-control {
+    .modal__form_control {
         width: 238px;
-        margin: 0 22px 30px;
-        padding-bottom: 13px;
+        margin: 29px 22px 0;
+        
     }
 }
