--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -1,11 +1,10 @@
-@import url(./__form-control/modal__form-control.css);
-@import url(./__form-submit/modal__form-submit.css);
 @import url(./__title/modal__title.css);
-@import url(../modal/__form/modal__form.css);
+@import url(./__form/modal__form.css);
 @import url(./__close-icon/modal__close-icon.css);
 @import url(./__container/modal__container.css);
 @import url(./__close-button/modal__close-button.css);
 @import url(./__open/modal__open.css);
+
 
 
 .modal {
