--- a/blocks/profile/__occupation/profile__occupation.css
+++ b/blocks/profile/__occupation/profile__occupation.css
@@ -1,4 +1,5 @@
 .profile__occupation {
+    max-width: 415px;
     font-family: 'Inter', Arial, sans-serif;
     font-size: 18px;
     line-height: 22px;
