--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,4 +1,5 @@
 .profile__title {
+    max-width: 373px;
     font-family: 'Inter', Arial, sans-serif;
     font-size: 42px;
     line-height: 48px;
