--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -3,7 +3,9 @@
 @import url(./__close-icon/modal__close-icon.css);
 @import url(./__container/modal__container.css);
 @import url(./__close-button/modal__close-button.css);
-@import url(./__open/modal__open.css);
+@import url(./_open/modal_open.css);
+@import url(./_input/modal_input.css);
+@import url(./_submit/modal_submit.css);
 
 
 
