--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -4,8 +4,8 @@
 @import url(./__container/modal__container.css);
 @import url(./__close-button/modal__close-button.css);
 @import url(./_open/modal_open.css);
-@import url(./_input/modal_input.css);
-@import url(./_submit/modal_submit.css);
+@import url(./__input/modal__input.css);
+@import url(./__submit/modal__submit.css);
 
 
 
