--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,4 +1,6 @@
-.elements {
+@import url(./__list/places__list.css);
+
+.places {
     width: 880px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -8,7 +10,7 @@
 } 
 
   @media screen and (max-width: 930px) {
-    .elements {
+    .places {
       width: 581px;
       grid-template-columns: repeat(2, 1fr);
       margin: 0 auto 50px;
@@ -17,7 +19,7 @@
 
 
 @media screen and (max-width: 610px) {
-    .elements {
+    .places {
       width: 282px;
       grid-template-columns: repeat(1, 1fr);
       grid-column-gap: 0;
