--- a/pages/index.css
+++ b/pages/index.css
@@ -4,9 +4,9 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/header/header.css);
-@import url(../blocks/elements/elements.css);
+@import url(../blocks/places/places.css);
 @import url(../blocks/profile/profile.css);
-@import url(../blocks/element/element.css);
+@import url(../blocks/card/card.css);
 @import url(../blocks/button/button.css);
 @import url(../blocks/modal/_open/modal_open.css);
 
