--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -5,7 +5,8 @@
 @import url(./__close-button/modal__close-button.css);
 @import url(./__input/modal__input.css);
 @import url(./__submit/modal__submit.css);
-
+@import url(./__image/modal__image.css);
+@import url(./__container/_content_preview/modal__container_content_preview.css);
 
 
 
