--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -12,7 +12,6 @@
 
 .modal {
     position: fixed;
-    display: none;
     height: auto;
     width: 100%;
     background-color: rgb(0,0,0, 0.5);
@@ -20,5 +19,8 @@
     bottom: 0;
     right: 0;
     left: 0;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
 
