code javascript for new card and like button activation

--- a/blocks/card/__like-heart/_active/card__like-heart_active.css
+++ b/blocks/card/__like-heart/_active/card__like-heart_active.css
@@ -1,6 +1,6 @@
-.card__like-heart {
+/*.card__like-heart_active {
     background-color: #FFFFFF;
-    display: block;
     width: 21px;
     height: 19px;
+    display: none;
 }
