--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -5,6 +5,7 @@
 @import url(./__like-heart/card__like-heart.css);
 @import url(./__trash-button/card__trash-button.css);
 @import url(./__trash-image/card__trash-image.css);
+@import url(./__like-heart/_active/card__like-heart_active.css);
 
 .card {
     max-width: 282px;
