--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -7,6 +7,7 @@
 @import url(./__submit/modal__submit.css);
 @import url(./__image/modal__image.css);
 @import url(./__container/_content_preview/modal__container_content_preview.css);
+@import url(./__caption/modal__caption.css);
 
 
 
