--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -8,9 +8,9 @@
 @import url(./__image/modal__image.css);
 @import url(./__form/_type_preview/modal__form_type_preview.css);
 @import url(./__caption/modal__caption.css);
-
-
-
+@import url(./__input_type_error/modal__input_type_error.css);
+@import url(./__input-error/modal__input-error.css);
+@import url(./__input-error_active/modal__input-error_active.css);
 
 
 .modal {
