code javascript to validate all input fields of both forms succesfully

--- a/blocks/modal/__submit/modal__submit.css
+++ b/blocks/modal/__submit/modal__submit.css
@@ -6,7 +6,7 @@
     font-size: 18px;
     font-weight: normal;
     font-style: normal;
-    margin: 40px 36px 36px;
+    margin: auto 36px 36px;
     line-height: 21.78px;
     width: 358px;
     height: 50.15px;
