--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -11,6 +11,7 @@
 @import url(./__input_type_error/modal__input_type_error.css);
 @import url(./__input-error/modal__input-error.css);
 @import url(./__input-error_active/modal__input-error_active.css);
+@import url(./__submit_inactive/modal__submit_inactive.css);
 
 
 .modal {
